--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
-    <title>NSScripts</title>
+    <title>Numworks Scripts</title>
   </head>
   <body>
 
@@ -21,7 +21,7 @@
 
 
       <div class="scripts">
-        
+
       </div>
 
 
